# WorkDayTimer_App

./: Cargo.toml  README.md  install.sh
src/: db.rs  gui.rs  main.rs  shared.rs  tray.rs
