[package]
name = "workday_timer"
version = "0.1.0"
edition = "2021"

[dependencies]
ksni = { version = "0.3", features = ["blocking"] }
eframe = { version = "0.29", default-features = false, features = ["glow", "wayland", "x11"] }
egui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"

[profile.release]
opt-level = 2
